[workspace]

resolver = "3"

default-members = ["netrun"]
members = ["netrun"]


[workspace.dependencies]
anyhow = "1.0"
tokio = { version = "1.48", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
pretty_assertions = "1.4"
reqwest = { version = "0.13", default-features = false, features = ["rustls"] }

netrun = { path = "netrun" }
