[workspace]

resolver = "3"

default-members = ["netrun"]
members = ["netrun", "tests"]


[workspace.dependencies]
anyhow = "1.0"
tokio = { version = "1.48", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
pretty_assertions = "1.4"
reqwest = { version = "0.13", default-features = false, features = ["rustls"] }
hreads = "0.12"
#hreads = { path = "../hreads" }
plat = "0.6"
wasm-bindgen-test = "0.3"
parking_lot = "0.12"
infisical = "0.0.3"
dotenvy = "0.15"
tokio-util = "0.7"
sysinfo = "0.37"
byte-unit = "5.2"
lz4_flex = "0.12"
local-ip-address = "0.6"
env_logger = "0.11"
rust-network-scanner = "2.0"
test-log = { git = "https://github.com/VladasZ/test-log", rev = "0cd1a2aea94b5ab70d316485f8fbaf7a1979d129", features = [
  "trace",
] }

netrun = { path = "netrun" }
