[package]
name = "netrun"
version = "0.20.0"
edition = "2024"
authors = ["Vladas Zakrevksis <146100@gmail.com>"]
description = "Network abstraction primitives"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/VladasZ/netrun"
repository = "https://github.com/VladasZ/netrun"

[lib]
name = "netrun"
crate-type = ["rlib", "staticlib", "dylib"]


[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
parking_lot = { workspace = true }
reqwest = { workspace = true }
local-ip-address = { workspace = true }
sysinfo = { workspace = true }
byte-unit = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true }
tokio-util = { workspace = true }
infisical = { workspace = true }
rust-network-scanner = { workspace = true }

[dev-dependencies]
hreads = { workspace = true }
pretty_assertions = { workspace = true }
wasm-bindgen-test = { workspace = true }
dotenvy = { workspace = true }
env_logger = { workspace = true }
test-log = { workspace = true }


[build-dependencies]
plat = { workspace = true }
