[package]
authors = ["Vladas Zakrevksis <146100@gmail.com>"]
description = "Network abstraction primitives"
edition = "2024"
homepage = "https://github.com/VladasZ/netrun"
license = "MIT OR Apache-2.0"
name = "netrun"
repository = "https://github.com/VladasZ/netrun"
version = "0.26.0"

[lib]
crate-type = ["dylib", "rlib", "staticlib"]
name = "netrun"


[dependencies]
anyhow = { workspace = true }
byte-unit = { workspace = true }
hreads = { workspace = true }
local-ip-address = { workspace = true }
log = { workspace = true }
lz4_flex = { workspace = true }
parking_lot = { workspace = true }
plat = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sysinfo = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
infisical = { workspace = true }
rust-network-scanner = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }

[dev-dependencies]
dotenvy = { workspace = true }
env_logger = { workspace = true }
pretty_assertions = { workspace = true }
test-log = { workspace = true }
wasm-bindgen-test = { workspace = true }


[build-dependencies]
plat = { workspace = true }
